--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-scikit-learn
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.1
-colorama==0.4.3
-Flask==1.1.2
-Flask-WTF==0.14.3
-future==0.18.2
-gunicorn==20.0.4
-h2o==3.26.0.10
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-numpy==1.18.2
-pandas==1.0.3
-python-dateutil==2.8.1
-pytz==2019.3
-requests==2.23.0
-six==1.14.0
-tabulate==0.8.7
-urllib3==1.25.8
-Werkzeug==1.0.1
-WTForms==2.2.1
-dill
+click==8.1.3
+dill==0.3.6
+Flask==2.2.3
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
+numpy==1.24.2
+pandas==1.5.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+scikit-learn==1.2.1
+scipy==1.10.0
+six==1.16.0
+sklearn==0.0.post1
+threadpoolctl==3.1.0
+Werkzeug==2.2.3
+zipp==3.14.0
